<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context="com.example.mokle.helprohingaapp.AboutActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="380dp"
                app:srcCompat="@drawable/mkh" />

            <TextView
                android:id="@+id/textView10"
                style="@style/about_textview"
                android:text="@string/mkr_name" />

            <TextView
                android:id="@+id/textView11"
                style="@style/about_textview"
                android:text="@string/mkr_roll" />

            <TextView
                android:id="@+id/textView5d3"
                style="@style/about_textview"
                android:text="@string/mkr_Batch" />

            <TextView
                android:id="@+id/textView12"
                style="@style/about_textview"
                android:text="@string/mkr_Uni" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="380dp"
                app:srcCompat="@drawable/nk" />

            <TextView
                android:id="@+id/textView7"
                style="@style/about_textview"
                android:text="@string/nhs_name" />

            <TextView
                android:id="@+id/textView8"
                style="@style/about_textview"
                android:text="@string/nhs_roll" />

            <TextView
                android:id="@+id/textView5d2"
                style="@style/about_textview"
                android:text="@string/nhs_Batch" />

            <TextView
                android:id="@+id/textView9"
                style="@style/about_textview"
                android:text="@string/nhs_Uni" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="380dp"
                app:srcCompat="@drawable/of" />

            <TextView
                android:id="@+id/textView4"
                style="@style/about_textview"
                android:text="@string/of_name" />

            <TextView
                android:id="@+id/textView"
                style="@style/about_textview"
                android:text="@string/of_roll" />

            <TextView
                android:id="@+id/textView5d"
                style="@style/about_textview"
                android:text="@string/of_Batch" />

            <TextView
                android:id="@+id/textView6"
                style="@style/about_textview"
                android:text="@string/of_Uni" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
