<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context="com.example.mokle.helprohingaapp.SubmitActivity">

    <LinearLayout
        android:background="@color/colorTransparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <EditText
        android:id="@+id/etx_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etx_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etx_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:gravity="start|end"
        android:hint="@string/phone" />

    <Spinner
        android:id="@+id/spinner"
        android:entries="@array/spinner_array"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etx_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|end"
        android:hint="@string/amount" />

    <EditText
        android:id="@+id/etx_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/address"
        android:inputType="textMultiLine"
        android:lines="3" />

    <EditText
        android:id="@+id/etx_message"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/message"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btn_submit"
        style="@style/ButtonStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit_info" />
    </LinearLayout>

</LinearLayout>
