<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_rohinyaa_9"
    android:orientation="vertical"
    tools:context="com.example.mokle.helprohingaapp.EmergencyServiceActivity">

    <LinearLayout
        android:background="@color/colorTransparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_doctor"
            android:onClick="onClickDoctor"
            style="@style/ButtonStyle"
            android:text="@string/doctor" />

        <Button
            android:id="@+id/btn_ambulance"
            android:onClick="onClickAmbulance"
            style="@style/ButtonStyle"
            android:text="@string/ambulance" />

        <Button
            android:id="@+id/btn_police"
            android:onClick="onClickPolice"
            style="@style/ButtonStyle"
            android:text="@string/police" />
    </LinearLayout>

    <LinearLayout
        android:background="@color/colorTransparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_donate"
            style="@style/ButtonStyle"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:onClick="onClickDonate"
            android:text="@string/donate" />
    </LinearLayout>

</LinearLayout>
